# epistasis-v2

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: test_fwht_bench.py  test_matrix_bench.py
benchmarks/: vs_v1.py
crates/epistasis-core/: Cargo.toml
crates/epistasis-core/src/: encode.rs  fwht.rs  lib.rs  matrix.rs
docs/: index.md  installation.md  quickstart.md
docs/concepts/: design-matrix.md  encodings.md  epistasis.md  genotype-phenotype-maps.md
docs/guides/: bayesian-sampling.md  cross-validation.md  plotting.md  simulation.md
docs/models/: classifiers.md  discriminant-analysis.md  gaussian-mixture.md  gaussian-process.md  linear.md  monotonic-ge.md  nonlinear.md  power-transform.md  regularized.md  spline.md
docs/reference/: changelog.md  exceptions.md  fast-path.md  pyplot.md  stats.md
docs/stylesheets/: extra.css
examples/: README.md  requirements.txt  showcase.py
examples/.streamlit/: config.toml
examples/app_pages/: about.py  cross_validation.py  design_matrix.py  fwht_speed.py  intro.py  linear_fit.py  simulate.py
examples/utils/: data.py  plots.py
python/epistasis/: __init__.py  _core.pyi  _reference.py  exceptions.py  fast.py  mapping.py  matrix.py  stats.py  utils.py  validate.py
python/epistasis/models/: __init__.py  base.py
python/epistasis/models/classifiers/: __init__.py  _base.py  discriminant_analysis.py  gaussian_process.py  gmm.py  logistic.py
python/epistasis/models/linear/: __init__.py  _regularized.py  elastic_net.py  lasso.py  ordinary.py  ridge.py
python/epistasis/models/nonlinear/: __init__.py  minimizer.py  monotonic_ge.py  ordinary.py  power.py  spline.py
python/epistasis/pyplot/: __init__.py  coefs.py  correlation.py
python/epistasis/sampling/: __init__.py  bayesian.py
python/epistasis/simulate/: __init__.py  linear.py
tests/: test_base_model.py  test_bayesian.py  test_classifiers_extra.py  test_fast_path.py  test_fwht.py  test_gpmap_bridge.py  test_linear_ordinary.py  test_linear_regularized.py  test_linear_sparse.py  test_logistic_classifier.py  test_mapping.py  test_matrix.py  test_matrix_parity.py  test_nonlinear_ordinary.py  test_nonlinear_variants.py  test_pyplot.py  test_simulate.py  test_smoke.py  test_stats.py  test_validate.py
